Move customization to dedicated package
